Bug 9861 - FAIL: EABI attributes from directives
Summary: FAIL: EABI attributes from directives
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: 2.20
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-18 15:39 UTC by John David Anglin
Modified: 2010-02-22 10:32 UTC (History)
1 user (show)

See Also:
Host: armv5tejl-unknown-linux-gnueabi
Target: armv5tejl-unknown-linux-gnueabi
Build: armv5tejl-unknown-linux-gnueabi
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John David Anglin 2009-02-18 15:39:06 UTC
Many attribute tests fail:

FAIL: EABI attributes from directives
FAIL: EABI attribute defaults
FAIL: attributes for -march=all
FAIL: attributes for -march=armv1
FAIL: attributes for -march=armv2
FAIL: attributes for -march=armv2a
FAIL: attributes for -march=armv2s
FAIL: attributes for -march=armv3
FAIL: attributes for -march=armv3m
FAIL: attributes for -march=armv4
FAIL: attributes for -march=armv4t
FAIL: attributes for -march=armv4txm
FAIL: attributes for -march=armv4xm
FAIL: attributes for -march=armv5
FAIL: attributes for -march=armv5t
FAIL: attributes for -march=armv5te
FAIL: attributes for -march=armv5tej
FAIL: attributes for -march=armv5texp
FAIL: attributes for -march=armv5txm
FAIL: attributes for -march=armv6-m
FAIL: attributes for -march=armv6
FAIL: attributes for -march=armv6j
FAIL: attributes for -march=armv6k
FAIL: attributes for -march=armv6kt2
FAIL: attributes for -march=armv6t2
FAIL: attributes for -march=armv6z
FAIL: attributes for -march=armv6zk
FAIL: attributes for -march=armv6zkt2
FAIL: attributes for -march=armv6zt2
FAIL: attributes for -march=armv7-a
FAIL: attributes for -march=armv7-m
FAIL: attributes for -march=armv7-r
FAIL: attributes for -march=armv7
FAIL: attributes for -march=armv7a
FAIL: attributes for -march=armv7m
FAIL: attributes for -march=armv7r
FAIL: attributes for -march=iwmmxt
FAIL: attributes for -march=iwmmxt2
FAIL: attributes for -march=xscale
FAIL: EABI attributes from command line
FAIL: EABI attribute ordering
FAIL: EABI attributes .eabi_attribute overrides .cpu
FAIL: gas/arm/eabi_attr_1

../as-new   -o dump.o /home/dave/gnu/binutils/src/gas/testsuite/gas/arm/attr-
cpu
-directive.s
Executing on host: sh -c {../as-new   -o 
dump.o /home/dave/gnu/binutils/src/gas/
testsuite/gas/arm/attr-cpu-directive.s 2>&1}  /dev/null gas.out (timeout = 300)
/home/dave/gnu/binutils/objdir/gas/testsuite/../../binutils/readelf  -A dump.o
Executing on host: sh -c 
{/home/dave/gnu/binutils/objdir/gas/testsuite/../../bin
utils/readelf  -A dump.o >dump.out 2>gas.stderr}  /dev/null  (timeout = 300)
extra lines in dump.out starting with "^  Tag_VFP_arch: VFPv2$"
EOF from /home/dave/gnu/binutils/src/gas/testsuite/gas/arm/attr-cpu-directive.d
FAIL: EABI attributes from directives
FAIL: EABI attributes from directives
../as-new   -o dump.o /home/dave/gnu/binutils/src/gas/testsuite/gas/arm/blank.s
Executing on host: sh -c {../as-new   -o 
dump.o /home/dave/gnu/binutils/src/gas/testsuite/gas/arm/blank.s 
2>&1}  /dev/null gas.out (timeout = 300)
/home/dave/gnu/binutils/objdir/gas/testsuite/../../binutils/readelf  -A dump.o
Executing on host: sh -c 
{/home/dave/gnu/binutils/objdir/gas/testsuite/../../binutils/readelf  -A 
dump.o >dump.out 2>gas.stderr}  /dev/null  (timeout = 300)
extra lines in dump.out starting with "^  Tag_VFP_arch: VFPv2$"
EOF from /home/dave/gnu/binutils/src/gas/testsuite/gas/arm/attr-default.d
FAIL: EABI attribute defaults

-bash-3.2$ ./as-new --version
GNU assembler (GNU Binutils) 2.19.51.20090217
Copyright 2008 Free Software Foundation, Inc.
Comment 1 Sourceware Commits 2010-02-22 10:25:10 UTC
Subject: Bug 9861

CVSROOT:	/cvs/src
Module name:	src
Changes by:	mgretton@sourceware.org	2010-02-22 10:24:56

Modified files:
	gas            : ChangeLog 
	gas/config     : tc-arm.c 

Log message:
	PR 9861
	* gas/config/tc-arm.c (CPU_DEFAULT): Do not define based upon build
	compiler's predefines.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/ChangeLog.diff?cvsroot=src&r1=1.4093&r2=1.4094
http://sources.redhat.com/cgi-bin/cvsweb.cgi/src/gas/config/tc-arm.c.diff?cvsroot=src&r1=1.431&r2=1.432

Comment 2 Matthew Gretton-Dann 2010-02-22 10:32:08 UTC
Patch for this has been committed.

See http://sourceware.org/ml/binutils/2010-02/msg00381.html for more information