	PR 9861 	* gas/config/tc-arm.c (CPU_DEFAULT): Do not define based upon build 	compiler's predefines.